--- a/DotRun/Resources/Info.plist
+++ b/DotRun/Resources/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>Icon.png</string>
+	<string></string>
 	<key>CFBundleIconFiles</key>
 	<array>
 		<string>Icon</string>
